syntax = "proto3";

option csharp_namespace = "ProtobufsSamples";

package greet;

import "Protos/keywordmessages.proto";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/Empty.proto";


// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHello2 (google.protobuf.Empty) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  bool isRequiered = 2;
  repeated int32 age = 3;
  map<int32, string> students = 4;
  google.protobuf.Any MyAnyType = 5;
  google.protobuf.BoolValue blo = 6;


}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32 lenght = 2;
  PersonType personType = 3;
}

enum PersonType
{
	option allow_alias = true;
	Teacher = 0;
	Student = 1;
	SSStudent = 1;
	Person = 2;
}